# robomagellan

./: .gitignore  README.md  RoboMagellanMassMoments.txt
robomagellan_bringup/: CMakeLists.txt  package.xml
robomagellan_bringup/config/: localization.yaml
robomagellan_bringup/launch/: camera.launch  competition.launch  gps.launch  imu.launch  joystick_teleop.launch  keyboard_teleop.launch  localization.launch  platform.launch  rosbag.launch  rosbag_no_camera.launch
robomagellan_bringup/scripts/: install_udev_rules.sh
robomagellan_bringup/udev/: 99-robomagellan.rules
robomagellan_description/: CMakeLists.txt  package.xml
robomagellan_description/launch/: robot_state_publisher.launch
robomagellan_description/meshes/: Robot.dae  Robot.dae.REMOVED.git-id  Robot_Collision.dae  Wheel.dae
robomagellan_description/urdf/: robomagellan.urdf.xacro
robomagellan_gazebo/: CMakeLists.txt  package.xml
robomagellan_gazebo/config/: diff_drive_controller.yaml
robomagellan_gazebo/launch/: robomagellan_empty_world.launch
robomagellan_hardware_interface/: CMakeLists.txt  package.xml
robomagellan_hardware_interface/config/: controllers.yaml  diff_drive_controller.yaml  hardware.yaml  joint_limits.yaml  joint_state_controller.yaml
robomagellan_hardware_interface/firmware/robomagellan_motor_controller/: Vex393EncoderMotor.hpp  WindowedFilter.hpp  robomagellan_motor_controller.ino
robomagellan_hardware_interface/include/robomagellan_hardware_interface/: SerialPort.h  robomagellan_hardware_interface.h
robomagellan_hardware_interface/launch/: robomagellan_velocity_controllers.launch
robomagellan_hardware_interface/src/: SerialPort.cpp  robomagellan_hardware_interface.cpp  robomagellan_hardware_interface_node.cpp
robomagellan_misc/: CMakeLists.txt  package.xml
robomagellan_misc/firmware/_9DoF_Razor_M0_Firmware/: config.h
robomagellan_misc/nodes/sparkfun_razor_imu_node/: CMakeLists.txt  sparkfun_razor_imu_node.cpp
robomagellan_navigation/: CMakeLists.txt  package.xml
robomagellan_navigation/config/: navigation_server_params.yaml
robomagellan_navigation/launch/: navigation.launch
robomagellan_platform/: CMakeLists.txt  package.xml
robomagellan_platform/launch/: camera.launch  gps.launch  platform.launch
