<?xml version="1.0"?>
<package format="2">
  <name>robomagellan_bringup</name>
  <version>0.0.0</version>
  <description>The robomagellan_bringup package</description>
  <maintainer email="matthew.barulic@gmail.com">Matthew Barulic</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>librealsense2</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>robomagellan_hardware_interface</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <export>
  </export>
</package>
