<?xml version="1.0"?>
<package format="2">
  <name>robomagellan_description</name>
  <version>0.0.0</version>
  <description>The robomagellan_description package</description>

  <maintainer email="matthew.barulic@gmail.com">Matthew Barulic</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>hector_gazebo_worlds</exec_depend>
  <exec_depend>realsense2_description</exec_depend>

  <export>

  </export>
</package>
