<?xml version="1.0"?>
<package format="2">
  <name>robomagellan_gazebo</name>
  <version>0.0.0</version>
  <description>The robomagellan_gazebo package</description>

  <maintainer email="matthew.barulic@gmail.com">Matthew Barulic</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>joint_state_controller</depend>
  <depend>position_controllers</depend>
  <depend>robot_state_publisher</depend>
  <depend>rqt_robot_steering</depend>
  <depend>rviz</depend>
  <depend>urdf_tutorial</depend>
  <depend>xacro</depend>

  <export>
  </export>
</package>
