<?xml version="1.0"?>
<package format="2">
  <name>robomagellan_misc</name>
  <version>0.0.0</version>
  <description>The robomagellan_misc package</description>

  <maintainer email="matthew.barulic@gmail.com">Matthew Barulic</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>serial</depend>

  <export>
  </export>
</package>
