<?xml version="1.0"?>
<package format="2">
  <name>robomagellan_navigation</name>
  <version>0.0.0</version>
  <description>The robomagellan_navigation package</description>

  <maintainer email="matthew.barulic@gmail.com">Matthew Barulic</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>mbf_costmap_nav</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>

  <export>
  </export>
</package>
