<?xml version="1.0"?>
<package format="2">
  <name>robomagellan_platform</name>
  <version>0.0.0</version>
  <description>The robomagellan_platform package</description>
  <maintainer email="matthew.barulic@gmail.com">Matthew Barulic</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>librealsense2</exec_depend>

  <export>
  </export>
</package>
